dhall/tests/type-errors/unit/OptionalDeprecatedSyntaxPresent.txt
Type error: error: annot mismatch: ([1] : List Natural) : Optional Natural
 --> <current file>:1:0
  |
1 | [ 1 ] : Optional Natural
  | ^^^^^^^^^^^^^^^^^^^^^^^^ annot mismatch: ([1] : List Natural) : Optional Natural
  |
